--- a/index.css
+++ b/index.css
@@ -1,13 +1,114 @@
-body {
-    background: #ccc;
+
+* {
+    font-family: 'Itim', cursive;
+    font-weight: 500;
+    font-size: 1em;
 }
 
-#authorize_button {
+#MainTitle {
+    margin-left: -0.25vw;
+    margin-top: 10vh;
+    font-family: 'Walter Turncoat', cursive;
+    font-size: 6em;
+}
+
+@keyframes rotate {
+    0% {transform: rotate(0deg);}
+    25% {transform: rotate(90deg);}
+    50% {transform: rotate(180deg);}
+    75% {transform: rotate(270deg);}
+    100% {transform: rotate(360deg);}
+}
+
+.icon {
+    width: 4.5vw;
+    height: 4.5vw;
+    margin-left: -0.63vw;
+    margin-bottom: 1.5vw;
+    animation-name: rotate;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-direction: reverse;
+}
+
+.doc_icon {
+    width: 2.8vw;
+    height: 2.5vw;
+    margin-left: -1vw;
+    margin-top: 4vw;
+    animation-name: rotate;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+.sheets_icon {
+    width: 2vw;
+    height: 1.8vw;
+    margin-left: -0.7vw;
+    margin-bottom: 0vw;
+    animation-name: rotate;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-direction: reverse;
+}
+.cog {
+    width: 4.85vw;
+    height: 4.85vw;
+    margin-left: -4.2vw;
+    margin-bottom: -1vw;
+    animation-name: rotate;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+.doc_cog {
+    width: 5.5vw;
+    height: 5.5vw;
+    margin-left: -5.2vw;
+    margin-bottom: 1.025vw;
+    animation-name: rotate;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-direction: reverse;
+    animation-delay: 0.25s;
+}
+.sheets_cog {
+    width: 4.1vw;
+    height: 4.1vw;
+    margin-left: -3.15vw;
+    margin-bottom: -1.15vw;
+    animation-name: rotate;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+body {
+    background: #dde;
+    text-align: center;
+}
+
+#MainCenterButtons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 95vh;
+    width: 98vw;
+    margin: 0;
+    padding: 0;
+    left: 0;
+    top: 0;
+}
+
+.colorful-btn {
     position: absolute;
     width: 10vw;
     height: 3vw;
-    left: 2.5vw;
-    bottom: 1.5vw;
+    margin-left: 1vw;
+    margin-top: 30vh;
     border-radius: 20px;
     border: 3px solid;
     background-clip: padding-box;
@@ -18,7 +119,7 @@ body {
     border-radius: 16px;
 }
 
-#authorize_button::after {
+.colorful-btn::after {
     position: absolute;
     top: -4px; bottom: -4px;
     left: -4px; right: -4px;
@@ -28,15 +129,40 @@ body {
     border-radius: 16px;
 }
 
-#DaySelector {
+#day_background {
+    width: 100vw;
+    height: 100vh;
     position: fixed;
+    left: 0;
+    top: 0;
+    background: #00000080;
+}
+
+#DaySelector {
+    position: absolute;
     left: calc(50vw - 15vw);
     top: calc(50vh - 15vh);
     width: 30vw;
     height: 30vh;
-    background: #888888fe;
+    background: #cccccc;
     border-radius: 10px;
-    border: 4px solid #4285F4;
+    border: 3px solid;
+    background-clip: padding-box;
+    padding: 10px;
+    /* just to show box-shadow still works fine */
+    box-shadow: 0 3px 9px black, inset 0 0 9px white;
+    border: 4px solid transparent;
+    border-radius: 16px;
+}
+
+#DaySelector::after {
+    position: absolute;
+    top: -4px; bottom: -4px;
+    left: -4px; right: -4px;
+    background:  linear-gradient(66deg, #4285F4 25%, #DB4437 25%, #DB4437 50%,#F4B400 50%, #F4B400 75%, #0F9D58 75%);
+    content: '';
+    z-index: -1;
+    border-radius: 16px;
 }
 
 #DaySelector p {
@@ -47,13 +173,14 @@ body {
 }
 
 #DaySelector button {
-    position: relative;
+    display: inline-block;
+    /* position: relative;
     top: calc(10vh - 3vw);
-    left: 9vw;
+    left: 9vw; */
     width: 6vw;
     height: 2vw;
     border-radius: 40px;
-    border: 2px solid #0e53c2;
+    /* border: 2px solid #0e53c2; */
 }
 
 #ADayButton {
@@ -62,6 +189,13 @@ body {
 
 #EDayButton {
     background-color: #0F9D58;
+}
+
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
 }
 
 .hidden {
