--- a/index.css
+++ b/index.css
@@ -22,6 +22,11 @@ input:focus {
     100% {transform: rotate(360deg);}
 }
 
+#CogContainer {
+    margin-left: -3vw;
+    width: 100%;
+}
+
 .icon {
     width: 4.5vw;
     height: 4.5vw;
@@ -119,7 +124,7 @@ body {
     box-shadow: 0 3px 9px black, inset 0 0 9px white;
     border: 4px solid transparent;
     border-radius: 16px;
-    transition: box-shadow margin-top 0.3s;
+    transition: box-shadow 0.3s ease-in-out, margin-top 0.3s ease-in-out;
 }
 
 .colorful-btn::after {
@@ -135,7 +140,7 @@ body {
 .colorful-btn:active {
     box-shadow: none;
     margin-top: calc(30vh + 9px);
-    transition: box-shadow margin-top 0.3s;
+    transition: box-shadow 0.3s ease-in-out, margin-top 0.3s ease-in-out;
 }
 
 #DaySelector {
@@ -194,14 +199,14 @@ body {
     box-shadow: 0 3px 3px #421511;
     border: 2px solid #000000aa;
     border-radius: 16px;
-    transition: box-shadow margin-top 0.1s;
+    transition: box-shadow 0.1s ease-in-out, margin-top 0.1s ease-in-out;
     font-size: 1em;
 }
 
 #ADayButton:active {
     box-shadow: none;
     bottom: calc(1vh + 3px);
-    transition: box-shadow margin-top 0.1s;
+    transition: box-shadow 0.1s ease-in-out, margin-top 0.1s ease-in-out;
 }
 
 #EDayButton {
@@ -215,14 +220,14 @@ body {
     box-shadow: 0 3px 3px #421511;
     border: 2px solid #000000aa;
     border-radius: 16px;
-    transition: box-shadow margin-top 0.1s;
+    transition: box-shadow 0.1s ease-in-out, margin-top 0.1s ease-in-out;
     font-size: 1em;
 }
 
 #EDayButton:active {
     box-shadow: none;
     bottom: calc(1vh + 3px);
-    transition: box-shadow margin-top 0.1s;
+    transition: box-shadow 0.1s ease-in-out, margin-top 0.1s ease-in-out;
 }
 
 .popup-window {
@@ -325,13 +330,13 @@ body {
     box-shadow: 0 3px 3px #421511;
     border: 2px solid #000000aa;
     border-radius: 16px;
-    transition: box-shadow margin-top 0.1s;
+    transition: box-shadow 0.1s ease-in-out, margin-top 0.1s ease-in-out;
 }
 
 .popup-close:active {
     box-shadow: none;
     bottom: calc(2vh - 3px);
-    transition: box-shadow margin-top 0.1s;
+    transition: box-shadow 0.1s ease-in-out, margin-top 0.1s ease-in-out;
 }
 
 #fail-container {
